--- a/POM/case_data/case.yaml
+++ b/POM/case_data/case.yaml
@@ -1,9 +1,18 @@
--
-  text: python
+- text: python
   except_value: python - 搜索
+- text: selenium
+  except_value: selenium - 搜索
+- text: selenium-pom
+  except_value: 错误的期盼值
 -
   text: selenium
   except_value: selenium - 搜索
 -
-  text: selenium-pom
-  except_value: 错误的期盼值
+  text: selenium
+  except_value: selenium - 搜索
+-
+  text: selenium
+  except_value: selenium - 搜索
+-
+  text: selenium
+  except_value: selenium - 搜索
